--- a/src/mygpsx/FXAddShip.fxml
+++ b/src/mygpsx/FXAddShip.fxml
@@ -5,15 +5,15 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CAddShipController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="434.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CAddShipController">
    <children>
       <Button layoutX="479.0" layoutY="364.0" mnemonicParsing="false" onAction="#btnAddShip" prefHeight="30.0" prefWidth="110.0" text="Добавить" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
-      <Label layoutX="14.0" layoutY="14.0" text="Введите название судна" />
-      <Label layoutX="14.0" layoutY="59.0" text="Ответственное лицо ФИО" />
-      <TextField fx:id="fxLbNameShip" layoutX="14.0" layoutY="28.0" prefHeight="22.0" prefWidth="192.0" promptText="Введите название судна" />
-      <TextField fx:id="fxLbDirectorShip" layoutX="14.0" layoutY="73.0" prefHeight="22.0" prefWidth="192.0" promptText="Ответственное лицо ФИО" />
-      <Label layoutX="14.0" layoutY="103.0" text="Краткое описание судна" />
-      <TextArea fx:id="fxTaShortDescriptionShip" layoutX="14.0" layoutY="120.0" prefHeight="204.0" prefWidth="192.0" promptText="Введите краткое описание судна..." />
+      <Label layoutX="14.0" layoutY="46.0" text="Введите название судна" />
+      <Label layoutX="14.0" layoutY="91.0" text="Ответственное лицо ФИО" />
+      <TextField fx:id="fxLbNameShip" layoutX="14.0" layoutY="60.0" prefHeight="22.0" prefWidth="192.0" promptText="Введите название судна" />
+      <TextField fx:id="fxLbDirectorShip" layoutX="14.0" layoutY="105.0" prefHeight="22.0" prefWidth="192.0" promptText="Ответственное лицо ФИО" />
+      <Label layoutX="14.0" layoutY="135.0" text="Краткое описание судна" />
+      <TextArea fx:id="fxTaShortDescriptionShip" layoutX="14.0" layoutY="152.0" prefHeight="204.0" prefWidth="192.0" promptText="Введите краткое описание судна..." />
       <Button layoutX="535.0" layoutY="28.0" mnemonicParsing="false" onAction="#btnInsertStartCoords" prefHeight="30.0" prefWidth="167.0" text="Ввести координаты" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
       <Pane layoutX="423.0" layoutY="50.0" prefHeight="55.0" prefWidth="167.0" style="-fx-border-color: blue;">
          <children>
@@ -28,14 +28,16 @@
             <Font size="12.0" />
          </font>
       </Label>
-      <TextField fx:id="fxTxtEmail" layoutX="216.0" layoutY="28.0" prefHeight="25.0" prefWidth="192.0" promptText="\@Введите email" />
-      <Label layoutX="216.0" layoutY="14.0" text="Email для авторизации:" />
-      <Label layoutX="216.0" layoutY="59.0" text="Введите пароль:" />
-      <PasswordField fx:id="fxTxtPassFirst" layoutX="216.0" layoutY="73.0" prefHeight="25.0" prefWidth="192.0" promptText="#############" />
-      <Label layoutX="216.0" layoutY="103.0" text="Подтвердите пароль:" />
-      <PasswordField fx:id="fxTxtPassSecond" layoutX="216.0" layoutY="120.0" prefHeight="25.0" prefWidth="192.0" promptText="#############" />
-      <Label fx:id="fxLbSuccessPass" layoutX="216.0" layoutY="145.0" prefHeight="17.0" prefWidth="192.0" text="ПАРОЛИ НЕ СОВПАДАЮТ!" textFill="RED" />
-      <ComboBox fx:id="fxCbSelectSysUser" layoutX="216.0" layoutY="188.0" prefHeight="25.0" prefWidth="214.0" />
-      <Label layoutX="216.0" layoutY="171.0" prefHeight="17.0" prefWidth="214.0" text="Выбор системного пользователя:" />
+      <TextField fx:id="fxTxtEmail" layoutX="217.0" layoutY="58.0" prefHeight="25.0" prefWidth="192.0" promptText="\@Введите email" />
+      <Label layoutX="217.0" layoutY="44.0" text="Email для авторизации:" />
+      <Label layoutX="217.0" layoutY="89.0" text="Введите пароль:" />
+      <PasswordField fx:id="fxTxtPassFirst" layoutX="217.0" layoutY="103.0" prefHeight="25.0" prefWidth="192.0" promptText="#############" />
+      <Label layoutX="217.0" layoutY="133.0" text="Подтвердите пароль:" />
+      <PasswordField fx:id="fxTxtPassSecond" layoutX="217.0" layoutY="150.0" prefHeight="25.0" prefWidth="192.0" promptText="#############" />
+      <Label fx:id="fxLbSuccessPass" layoutX="217.0" layoutY="175.0" prefHeight="17.0" prefWidth="192.0" text="ПАРОЛИ НЕ СОВПАДАЮТ!" textFill="RED" />
+      <ComboBox fx:id="fxCbSelectSysUser" layoutX="217.0" layoutY="218.0" prefHeight="25.0" prefWidth="214.0" />
+      <Label layoutX="217.0" layoutY="201.0" prefHeight="17.0" prefWidth="214.0" text="Выбор системного пользователя:" />
+      <Label layoutX="14.0" layoutY="6.0" text="Общее название объекта(представление)" textFill="GREEN" />
+      <TextField fx:id="fxTxtFreeNameFirst" layoutX="14.0" layoutY="23.0" prefHeight="25.0" prefWidth="397.0" promptText="Название для понимания в целом сущности Онного" />
    </children>
 </AnchorPane>
