--- a/src/mygpsx/LPSMapTUserAndJobs.fxml
+++ b/src/mygpsx/LPSMapTUserAndJobs.fxml
@@ -10,6 +10,7 @@
 
 <AnchorPane id="fxAPaneMain" fx:id="fxAPaneMain" prefHeight="556.0" prefWidth="750" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CTUsersJobsController">
    <children>
+      <Label layoutX="10.0" layoutY="48.0" text="Название задачи" />
                            <Label layoutX="63.0" layoutY="33.0" text="Выбор сотрудника:" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
                            <ComboBox fx:id="fxCbSelectUser" layoutX="162.0" layoutY="6.0" prefHeight="25.0" prefWidth="260.0" AnchorPane.leftAnchor="162.0" AnchorPane.topAnchor="6.0" />
       <Label layoutX="14.0" layoutY="85.0" text="Выбрать шаблон задачи:" AnchorPane.leftAnchor="10.0" />
@@ -18,5 +19,6 @@
       <ComboBox fx:id="fxCbSelectPriorityJob" layoutX="162.0" layoutY="125.0" prefHeight="25.0" prefWidth="260.0" />
       <Button fx:id="fxBtnAddingJobNew" layoutX="430.0" layoutY="125.0" mnemonicParsing="false" onAction="#BtnAddingJobNew" prefHeight="25.0" prefWidth="153.0" text="Добавить задачу?" />
       <Label fx:id="fxLbErrorSelectPriority" layoutX="162.0" layoutY="150.0" prefHeight="17.0" prefWidth="260.0" text="ВЫ НЕ УКАЗАЛИ ПРИОРИТЕТ!" textFill="RED" />
+      <TextField fx:id="fxTxtShortTaskName" layoutX="162.0" layoutY="44.0" prefHeight="25.0" prefWidth="260.0" promptText="Краткое название задачи" />
    </children>
  </AnchorPane>
