--- a/src/mygpsx/ListCellUser.fxml
+++ b/src/mygpsx/ListCellUser.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="fxCellPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="90.0" prefWidth="175.0" style="-fx-background-color: #86ef0b;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CListCellUserController">
+<AnchorPane fx:id="fxCellPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="144.0" prefWidth="175.0" style="-fx-background-color: #86ef0b;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CListCellUserController">
    <children>
       <Label layoutX="-6.0" layoutY="-3.0" prefHeight="14.0" prefWidth="161.0" text="НАЗВАНИЕ СУДНА:" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <Label fx:id="lbMyNameShip" layoutX="-11.0" layoutY="20.0" prefHeight="15.0" prefWidth="180.0" text="Label" textAlignment="CENTER" textFill="#0a43ee" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0">
@@ -23,6 +23,7 @@
               </items>
             </ContextMenu>
          </contextMenu></Label>
-      <Button fx:id="fxBtnViewJobs" layoutX="-5.0" layoutY="56.0" mnemonicParsing="false" onAction="#BtnViewJobs" text="Создать задачу" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="64.0" />
+      <Button fx:id="fxBtnViewJobs" layoutX="-5.0" layoutY="56.0" mnemonicParsing="false" onAction="#BtnViewJobs" text="Создать задачу" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+      <Label fx:id="fxLbBindingEmail" text="Label" textFill="BLUE" AnchorPane.topAnchor="80.0" />
    </children>
 </AnchorPane>
