--- a/src/mygpsx/LPSMapTUserAndJobs.fxml
+++ b/src/mygpsx/LPSMapTUserAndJobs.fxml
@@ -11,7 +11,7 @@
 <AnchorPane id="fxAPaneMain" fx:id="fxAPaneMain" prefHeight="556.0" prefWidth="750" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CTUsersJobsController">
    <children>
       <Label layoutX="10.0" layoutY="48.0" text="Название задачи" />
-                           <Label layoutX="63.0" layoutY="33.0" text="Выбор сотрудника:" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
+                           <Label fx:id="fxLbNameUser" layoutX="63.0" layoutY="33.0" text="Выбор сотрудника:" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
                            <ComboBox fx:id="fxCbSelectUser" layoutX="162.0" layoutY="6.0" prefHeight="25.0" prefWidth="260.0" AnchorPane.leftAnchor="162.0" AnchorPane.topAnchor="6.0" />
       <Label layoutX="14.0" layoutY="85.0" text="Выбрать шаблон задачи:" AnchorPane.leftAnchor="10.0" />
       <ComboBox fx:id="fxCbSelectTemplateJob" layoutX="162.0" layoutY="81.0" prefHeight="25.0" prefWidth="260.0" AnchorPane.topAnchor="80.0" />
