--- a/src/mygpsx/FXSysUserEdit.fxml
+++ b/src/mygpsx/FXSysUserEdit.fxml
@@ -4,7 +4,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="240.0" prefWidth="357.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CSysUserEditController">
+<AnchorPane fx:id="fxApaneMain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="240.0" prefWidth="357.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CSysUserEditController">
    <children>
       <Label layoutX="8.0" layoutY="6.0" text="Список SysUser:" />
       <ListView fx:id="fxListViewStatus" layoutX="8.0" layoutY="34.0" prefHeight="189.0" prefWidth="343.0" />
