--- a/src/mygpsx/LPSMap.fxml
+++ b/src/mygpsx/LPSMap.fxml
@@ -116,7 +116,10 @@
         <panes>
           <TitledPane fx:id="fxTPaneRight1" animated="false" text="Дополнительно">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TextArea fx:id="fxTxtArLogs" layoutX="12.0" layoutY="14.0" prefHeight="451.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                     </children></AnchorPane>
             </content>
           </TitledPane>
           <TitledPane fx:id="fxTPaneRight2" animated="false" text="Дополнительно 2">
