--- a/src/mygpsx/LPSMap.fxml
+++ b/src/mygpsx/LPSMap.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="556.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CMainController">
     <children>
-      <TabPane fx:id="fxTabPaneMain" layoutX="225.0" layoutY="14.0" prefHeight="556.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="225.0" AnchorPane.rightAnchor="225.0" AnchorPane.topAnchor="0">
+      <TabPane fx:id="fxTabPaneMain" layoutX="225.0" layoutY="14.0" prefHeight="556.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="225.0" AnchorPane.topAnchor="0">
         <tabs>
           <Tab fx:id="fxTabPaneUsersOnMaps" text="Где сейчас">
                <content>
@@ -39,21 +39,20 @@
 		  <Tab text="Отчеты" />
         </tabs>
       </TabPane>
-      <Accordion fx:id="fxAccordLeftMain" prefWidth="225.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Accordion fx:id="fxAccordLeftMain" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
         <panes>
           <TitledPane fx:id="fxTPaneLeft1" animated="false" prefHeight="556.0" prefWidth="224.0" text="Сообщения">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="434.0" prefWidth="222.0">
                      <children>
-                        <Label alignment="CENTER" contentDisplay="TOP" layoutX="9.0" layoutY="14.0" prefHeight="28.0" prefWidth="130.0" text="Входящее сообщение" textAlignment="CENTER" textFill="#f51212" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="10.199999999999989" />
-                        <TextArea fx:id="mymsg" layoutX="9.0" layoutY="42.0" prefHeight="68.0" prefWidth="204.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="10.199999999999989" />
-                        <TextArea fx:id="taOutMsg" layoutX="37.6" layoutY="148.6" prefHeight="103.0" prefWidth="166.0" AnchorPane.bottomAnchor="220.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="139.0" />
-                        <Button layoutX="9.0" layoutY="230.0" mnemonicParsing="false" onAction="#handleSendMsg" prefHeight="30.0" prefWidth="97.0" text="Отправить" textAlignment="CENTER" textFill="#e10c0c" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="125.19999999999999" />
-                        <Button fx:id="fxBtnCkearMessages" layoutX="9.0" layoutY="114.0" mnemonicParsing="false" onAction="#btnClearMessages" text="Очистить сообщения" textFill="#4e26c6" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="10.199999999999989" />
-                        <Button layoutX="130.0" layoutY="230.0" mnemonicParsing="false" onAction="#btnLoadFileToMsg" prefHeight="30.0" prefWidth="83.0" text="Файл" AnchorPane.rightAnchor="10.0" />
-                        <Label fx:id="fxLbNameFileSelect" alignment="CENTER" layoutX="9.0" layoutY="269.0" prefHeight="20.0" prefWidth="200.0" style="-fx-border-color: blue;" text="Выберите файл..." AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="10.199999999999989" />
-                        <ListView fx:id="fxListUsersMsg" layoutX="20.0" layoutY="294.0" prefHeight="166.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="285.0" />
-                        <Hyperlink fx:id="fxHlinkDoc" layoutX="24.0" layoutY="149.0" prefHeight="23.0" prefWidth="175.0" />
+                        <Label alignment="CENTER" contentDisplay="TOP" layoutX="24.6" layoutY="19.6" prefHeight="20.0" prefWidth="138.0" text="Переписка" textAlignment="CENTER" textFill="#f51212" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="145.0" AnchorPane.topAnchor="0.0" />
+                        <Hyperlink fx:id="fxHlinkDoc" layoutX="24.0" layoutY="19.6" prefHeight="23.0" prefWidth="135.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="0.0" />
+                        <TextArea fx:id="mymsg" layoutX="23.6" layoutY="44.6" prefHeight="190.0" prefWidth="269.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="25.0" />
+                        <TextArea fx:id="taOutMsg" layoutX="51.6" layoutY="272.6" prefHeight="30.0" prefWidth="212.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="260.0" />
+                        <Button layoutX="34.0" layoutY="305.0" mnemonicParsing="false" onAction="#handleSendMsg" prefHeight="20.0" prefWidth="97.0" text="Отправить" textAlignment="CENTER" textFill="#e10c0c" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" />
+                        <Button fx:id="fxBtnCkearMessages" layoutX="14.0" layoutY="227.0" mnemonicParsing="false" onAction="#btnClearMessages" text="Очистить сообщения" textFill="GREEN" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="227.0" />
+                        <Button layoutX="24.0" layoutY="328.0" mnemonicParsing="false" onAction="#btnLoadFileToMsg" prefHeight="20.0" prefWidth="83.0" text="Отправка документов" textFill="BLUE" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="325.0" />
+                        <ListView fx:id="fxListUsersMsg" layoutX="20.0" layoutY="294.0" prefHeight="166.0" prefWidth="200.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="355.0" />
                      </children>
                   </AnchorPane>
             </content>
@@ -89,7 +88,7 @@
                         <Button fx:id="btnSettingsStatusEdit" layoutX="47.0" layoutY="46.0" mnemonicParsing="false" onAction="#FrameSettingsStatusEdit" prefHeight="25.0" prefWidth="200.0" text="Ред. статусов задач" textFill="BLUE" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="35.0" />
                         <Button fx:id="btnSettingsPriorityEdit" layoutX="10.0" layoutY="79.0" mnemonicParsing="false" onAction="#FrameSettingsPrioritetsEdit" prefHeight="25.0" prefWidth="200.0" text="Ред. приоритетов задач" textFill="BLUE" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" />
                         <Button fx:id="btnSettingsTypejobEdit" layoutX="10.0" layoutY="114.0" mnemonicParsing="false" onAction="#FrameSettingsTypejobEdit" prefHeight="25.0" prefWidth="200.0" text="Ред. типов задач" textFill="BLUE" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="9.199999999999989" />
-                        <Button fx:id="btnSettingsAttrjobEdit" layoutX="10.0" layoutY="149.0" mnemonicParsing="false" onAction="#FrameSettingsAttrjobEdit" prefHeight="25.0" prefWidth="200.0" text="Ред. атрибутов задач" textFill="#00cc66" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="9.199999999999989" />
+                        <Button fx:id="btnSettingsAttrjobEdit" layoutX="10.0" layoutY="149.0" mnemonicParsing="false" onAction="#FrameSettingsAttrjobEdit" prefHeight="25.0" prefWidth="200.0" text="Ред. атрибутов задач" textFill="GREEN" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="9.199999999999989" />
                         <Button fx:id="btnSettingsTypedescjobEdit" layoutX="10.0" layoutY="183.0" mnemonicParsing="false" onAction="#FrameSettingsTypedescjobEdit" prefHeight="25.0" prefWidth="200.0" text="Ред. типовых описаний" textFill="BLUE" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="9.199999999999989" />
                         <Button fx:id="btnSettingsTypeobjEdit" layoutX="10.0" layoutY="218.0" mnemonicParsing="false" onAction="#FrameSettingsTypeobjEdit" prefHeight="25.0" prefWidth="196.0" text="Ред. типов объектов" textFill="BLUE" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="9.199999999999989" />
                         <Button fx:id="btnSettingsAttrobjEdit" layoutX="10.0" layoutY="250.0" mnemonicParsing="false" onAction="#FrameSettingsAttrobjEdit" text="Ред. атрибутов объектов" textFill="#00cc66" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="9.199999999999989" />
