# - Победил TextView - теперь показывается нормально!
Т.е. при сообщении раскрывается, а при ссылке TextView - убирается,
дабы он не нужен!!!

--- a/src/mygpsx/ListCellUserMsg.fxml
+++ b/src/mygpsx/ListCellUserMsg.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="fxCellPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="250.0" style="-fx-background-color: #86ef0b;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mygpsx.CListCellUserController">
+<AnchorPane fx:id="fxCellPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="250.0" style="-fx-background-color: #86ef0b;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="-6.0" layoutY="-3.0" prefHeight="14.0" prefWidth="161.0" text="НАЗВАНИЕ СУДНА:" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <Label fx:id="lbMyNameShip" layoutX="-11.0" layoutY="20.0" prefHeight="15.0" prefWidth="180.0" text="Label" textAlignment="CENTER" textFill="#0a43ee" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0">
