--- a/src/mygpsx/ListCellUserMsg.fxml
+++ b/src/mygpsx/ListCellUserMsg.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -15,5 +16,6 @@
       <Label layoutX="-6.0" layoutY="27.0" text="КАПИТАН СУДНА(ФИО):" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="29.0" />
       <Label fx:id="lbMyDirectorShip" layoutX="-11.0" layoutY="43.0" prefHeight="15.0" prefWidth="180.0" text="Label" textFill="#ed160c" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="43.0" />
       <Label fx:id="fxLbUniqueID" layoutX="125.0" prefHeight="17.0" prefWidth="120.0" text="Label" />
+      <Label alignment="CENTER" prefWidth="100.0" style="-fx-background-color: #cc3333;" text="НОВОЕ" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="0.0" />
    </children>
 </AnchorPane>
